--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "react-formula-one",
   "version": "0.1.0",
   "private": false,
+  "homepage": "https://christophe77.github.io/react-formula-one",
   "dependencies": {
     "@emotion/react": "^11.10.5",
     "@emotion/styled": "^11.10.5",
@@ -18,6 +19,7 @@
     "@types/react-redux": "^7.1.24",
     "axios": "^1.2.2",
     "framer-motion": "^11.3.30",
+    "gh-pages": "^6.1.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.2",
@@ -26,6 +28,8 @@
     "web-vitals": "^4.2.3"
   },
   "scripts": {
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -b master -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
